applications/test-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web
  namespace: test
  labels:
    app.kubernetes.io/name: test-web
spec:
  selector:
    app.kubernetes.io/name: test-web
  ports:
    - name: http
      port: 80
      targetPort: http
