applications/test-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-web
  namespace: test
  labels:
    app.kubernetes.io/name: test-web
    app.kubernetes.io/part-of: klaforge
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - test.klaforge.dev
      secretName: klaforge-dev-wildcard-tls

  rules:
    - host: test.klaforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-web
                port:
                  name: http
